--- a/app/src/main/res/layout/chat_message_query.xml
+++ b/app/src/main/res/layout/chat_message_query.xml
@@ -14,6 +14,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="@dimen/chat_side_padding"
         android:layout_marginLeft="@dimen/chat_side_padding"
+        card_view:contentPadding="@dimen/activity_horizontal_margin_very_narrow"
+        card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="@dimen/cardview_corner_radius"
         card_view:cardElevation="@dimen/cardview_medium_elevation"
         card_view:cardBackgroundColor="@color/colorAccentLight">
@@ -22,6 +24,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/queryImage"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/chat_image_size"
+                android:layout_alignParentTop="true"/>
+
             <TextView
                 android:id="@+id/query"
                 style="?android:textAppearanceMedium"
@@ -29,20 +37,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="@dimen/chat_card_min_width"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="@dimen/message_text_padding"
-                android:layout_marginStart="@dimen/message_text_padding"
-                android:layout_marginEnd="@dimen/message_text_padding"
-                android:layout_marginRight="@dimen/message_text_padding"
+                android:layout_below="@id/queryImage"
+                android:paddingLeft="@dimen/message_text_padding"
+                android:paddingStart="@dimen/message_text_padding"
+                android:paddingEnd="@dimen/message_text_padding"
+                android:paddingRight="@dimen/message_text_padding"
                 android:layout_marginTop="@dimen/activity_vertical_margin_very_narrow"
                 android:textSize="@dimen/message_text_size"
                 android:singleLine="false"/>
 
-            <ImageView
-                android:id="@+id/queryImage"
-                android:layout_width="@dimen/chat_image_size"
-                android:layout_height="@dimen/chat_image_size"
-                android:layout_below="@id/query" />
 
             <TextView
                 android:id="@+id/query_timestamp"
@@ -53,11 +56,6 @@
                 android:layout_below="@id/query"
                 android:layout_alignRight="@id/query"
                 android:layout_alignEnd="@id/query"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin_very_narrow"
-                android:layout_marginStart="@dimen/activity_horizontal_margin_very_narrow"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin_very_narrow"
-                android:layout_marginRight="@dimen/activity_horizontal_margin_very_narrow"
-                android:layout_marginBottom="@dimen/activity_vertical_margin_very_narrow"
                 android:textSize="@dimen/message_timestamp_size"
                 android:singleLine="true"/>
 
@@ -91,6 +89,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginEnd="@dimen/chat_side_padding"
         android:layout_marginRight="@dimen/chat_side_padding"
+        card_view:contentPadding="@dimen/activity_horizontal_margin_very_narrow"
+        card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="@dimen/cardview_corner_radius"
         card_view:cardElevation="@dimen/cardview_medium_elevation"
         card_view:cardBackgroundColor="@color/colorWhite">
@@ -99,26 +99,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/replyImage"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/chat_image_size"
+                android:layout_alignParentTop="true"/>
+
             <TextView
                 android:id="@+id/reply"
                 style="?android:textAppearanceMedium"
                 android:textColor="?android:textColorPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="@dimen/message_text_padding"
-                android:layout_marginStart="@dimen/message_text_padding"
-                android:layout_marginEnd="@dimen/message_text_padding"
-                android:layout_marginRight="@dimen/message_text_padding"
+                android:layout_below="@id/replyImage"
+                android:paddingLeft="@dimen/message_text_padding"
+                android:paddingStart="@dimen/message_text_padding"
+                android:paddingEnd="@dimen/message_text_padding"
+                android:paddingRight="@dimen/message_text_padding"
                 android:layout_marginTop="@dimen/activity_vertical_margin_very_narrow"
                 android:textSize="@dimen/message_text_size"
                 android:singleLine="false"/>
 
-            <ImageView
-                android:id="@+id/replyImage"
-                android:layout_width="@dimen/chat_image_size"
-                android:layout_height="@dimen/chat_image_size"
-                android:layout_below="@id/reply"/>
 
             <TextView
                 android:id="@+id/reply_timestamp"
@@ -129,11 +130,6 @@
                 android:layout_below="@id/reply"
                 android:layout_alignRight="@id/reply"
                 android:layout_alignEnd="@id/reply"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin_very_narrow"
-                android:layout_marginStart="@dimen/activity_horizontal_margin_very_narrow"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin_very_narrow"
-                android:layout_marginRight="@dimen/activity_horizontal_margin_very_narrow"
-                android:layout_marginBottom="@dimen/activity_vertical_margin_very_narrow"
                 android:textSize="@dimen/message_timestamp_size"
                 android:singleLine="true"/>
 
