--- a/app/src/main/res/layout/story.xml
+++ b/app/src/main/res/layout/story.xml
@@ -66,7 +66,7 @@
             android:singleLine="false"/>
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/story_viewpager"
+            android:id="@+id/story_pager"
             android:layout_width="match_parent"
             android:layout_height="@dimen/story_pager_height"
             android:layout_marginLeft="@dimen/activity_horizontal_margin_narrow"
@@ -269,11 +269,3 @@
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
-
-
-
-
-
-
-
-
