--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -91,7 +91,6 @@
                 android:layout_alignParentEnd="true"
                 android:layout_toRightOf="@+id/button_image"
                 android:layout_toEndOf="@+id/button_image"
-                android:hint="@string/hint_text_chat"
                 android:imeActionId="@+id/send"
                 android:imeActionLabel="@string/action_send"
                 android:imeOptions="actionSend"
@@ -107,7 +106,7 @@
             android:id="@+id/button_send"
             android:layout_width="@dimen/icon_button_size"
             android:layout_height="@dimen/icon_button_size"
-            android:background="@drawable/ic_send"
+            android:background="@drawable/send_icon_disabled"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_marginLeft="@dimen/abc_button_padding_horizontal_material"
