--- a/app/src/main/res/layout/chat_message_query.xml
+++ b/app/src/main/res/layout/chat_message_query.xml
@@ -10,6 +10,7 @@
         android:id="@+id/cardview_query"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="@dimen/chat_card_min_width"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="@dimen/chat_side_padding"
@@ -18,7 +19,7 @@
         card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="@dimen/cardview_corner_radius"
         card_view:cardElevation="@dimen/cardview_medium_elevation"
-        card_view:cardBackgroundColor="@color/colorAccentLight">
+        card_view:cardBackgroundColor="@color/colorAccent">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -75,6 +76,7 @@
                 android:layout_marginBottom="@dimen/activity_vertical_margin_very_narrow"
                 android:textSize="@dimen/message_timestamp_size"
                 android:singleLine="true"/>
+
         </RelativeLayout>
 
      </android.support.v7.widget.CardView>
@@ -111,6 +113,7 @@
                 android:textColor="?android:textColorPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:minWidth="@dimen/chat_card_min_width"
                 android:layout_below="@id/replyImage"
                 android:paddingLeft="@dimen/message_text_padding"
                 android:paddingStart="@dimen/message_text_padding"
