--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -8,4 +8,22 @@
         <item>@drawable/ic_photo_camera_24dp</item>
         <item>@drawable/ic_photo_library_24dp</item>
     </integer-array>
+    <string-array name="hint_text_list">
+        <item>Howdy Partner!</item>
+        <item>How you doin\'?</item>
+        <item>Hola Bonita!</item>
+        <item>What\'s on your mind?</item>
+        <item>I\'m Batman!</item>
+        <item>Knock, Knock!</item>
+        <item>What does the fox say?</item>
+        <item>Ms. Potts? This is Jarvis</item>
+    </string-array>
+    <array name="random_bg_colors">
+        <item>@color/light_cyan</item>
+        <item>@color/medium_champagne</item>
+        <item>@color/mindaro</item>
+        <item>@color/papaya_whip</item>
+        <item>@color/sunny</item>
+        <item>@color/timberwolf</item>
+    </array>
 </resources>
