--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="title_text_size">18sp</dimen>
+    <dimen name="title_text_size">16sp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_vertical_margin_broad">24dp</dimen>
@@ -26,17 +26,19 @@
 
     <dimen name="login_button_height">45dp</dimen>
     <dimen name="fb_login_vertical_padding">13dp</dimen>
-    <dimen name="fb_login_horizontal_margin">3dp</dimen>
+    <dimen name="fb_login_horizontal_margin">10dp</dimen>
     <dimen name="login_button_vertical_margin">20dp</dimen>
+    <dimen name="login_button_vertical_bottom_margin">100dp</dimen>
     <dimen name="google_login_padding">5dp</dimen>
     <dimen name="word_spacing">2dp</dimen>
+    <dimen name="login_privacy_promise_size">12sp</dimen>
 
     <dimen name="high_elevation">4dp</dimen>
     <dimen name="medium_elevation">2dp</dimen>
     <dimen name="low_elevation">1dp</dimen>
     <dimen name="drop_shadow_height">4dp</dimen>
     <dimen name="cardview_medium_elevation">2dp</dimen>
-    <dimen name="cardview_corner_radius">1dp</dimen>
+    <dimen name="cardview_corner_radius">3dp</dimen>
 
     <dimen name="app_name_fullscreen_text_size">35sp</dimen>
     <dimen name="hint_text_size">16sp</dimen>
