--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -11,6 +11,9 @@
 
     <!--mobile web link of the app-->
     <string name="mobile_web_link">http://www.parapluie.in</string>
+
+    <!--mobile web link of the app-->
+    <string name="mobile_fallback_link">http://www.parapluie.in/requestinvite</string>
     
     <!--batch API Key-->
     <string name="batch_api_key">DEV57A08F6E6FE36C56522B32FFB78</string>
