--- a/app/src/main/res/layout/chat_message_query.xml
+++ b/app/src/main/res/layout/chat_message_query.xml
@@ -15,6 +15,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="@dimen/chat_side_padding"
         android:layout_marginLeft="@dimen/chat_side_padding"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
         card_view:contentPadding="@dimen/activity_horizontal_margin_very_narrow"
         card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="@dimen/cardview_corner_radius"
@@ -44,6 +46,9 @@
                 android:paddingEnd="@dimen/message_text_padding"
                 android:paddingRight="@dimen/message_text_padding"
                 android:layout_marginTop="@dimen/activity_vertical_margin_very_narrow"
+                android:autoLink="all"
+                android:linksClickable="true"
+                android:textColorLink="@color/colorHyperlink"
                 android:textSize="@dimen/message_text_size"
                 android:singleLine="false"/>
 
@@ -91,6 +96,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginEnd="@dimen/chat_side_padding"
         android:layout_marginRight="@dimen/chat_side_padding"
+        android:foreground="?attr/selectableItemBackground"
+        android:clickable="true"
         card_view:contentPadding="@dimen/activity_horizontal_margin_very_narrow"
         card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="@dimen/cardview_corner_radius"
@@ -120,6 +127,9 @@
                 android:paddingEnd="@dimen/message_text_padding"
                 android:paddingRight="@dimen/message_text_padding"
                 android:layout_marginTop="@dimen/activity_vertical_margin_very_narrow"
+                android:autoLink="all"
+                android:linksClickable="true"
+                android:textColorLink="@color/colorHyperlink"
                 android:textSize="@dimen/message_text_size"
                 android:singleLine="false"/>
 
