--- a/app/src/main/res/layout/story_pager_item.xml
+++ b/app/src/main/res/layout/story_pager_item.xml
@@ -14,16 +14,15 @@
         android:id="@+id/story_pager_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin_narrow"
-        android:layout_marginStart="@dimen/activity_horizontal_margin_narrow"
-        android:layout_marginRight="@dimen/activity_horizontal_margin_narrow"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin_narrow"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin_very_narrow"
+        android:layout_marginStart="@dimen/activity_horizontal_margin_very_narrow"
+        android:layout_marginRight="@dimen/activity_horizontal_margin_very_narrow"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin_very_narrow"
         android:layout_marginBottom="@dimen/activity_vertical_margin_very_narrow"
         android:layout_marginTop="@dimen/activity_vertical_margin_very_narrow"
         android:textSize="@dimen/story_text_size"
         android:textColor="@color/colorSecondary"
-        android:singleLine="false"
-        android:text="Sample text for Pager item"/>
+        android:singleLine="false"/>
 
 
 </LinearLayout>
