--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,7 @@
     <dimen name="title_text_size">16sp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin_broad">24dp</dimen>
+    <dimen name="activity_vertical_margin_broad">50dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="activity_horizontal_margin_narrow">8dp</dimen>
     <dimen name="activity_horizontal_margin_very_narrow">4dp</dimen>
@@ -71,5 +71,7 @@
     <!--Profile Page Dimensions-->
     <dimen name="display_name_size">22sp</dimen>
     <dimen name="display_picture_size">120dp</dimen>
+    <dimen name="placeholder_picture_height">280dp</dimen>
     <dimen name="display_name_margin_top">80dp</dimen>
+    <dimen name="placeholder_text_size">15sp</dimen>
 </resources>
