--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <!--<color name="colorAccentDark">#FFD21F</color>
     <color name="colorAccent">#ffe061</color>
     <color name="colorAccentLight">#FFEFAD</color>-->
-    <color name="colorAccent">#fdcacaca</color>
+    <color name="colorAccent">#eeeeee</color>
     <color name="colorWhite">#FFFFFF</color>
     <!--<color name="colorSecondary">#50514F</color>-->
     <color name="colorSecondary">#d1000000</color>
