--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -52,7 +52,7 @@
     <dimen name="tab_above_icon_padding">8dp</dimen>
 
     <!--Story Image Dimension-->
-    <dimen name="story_pager_height">280dp</dimen>
+    <dimen name="story_pager_height">295dp</dimen>
     <dimen name="story_pager_text_height">40dp</dimen>
     <dimen name="story_pager_image_height">240dp</dimen>
     <dimen name="story_title_size">20sp</dimen>
@@ -76,4 +76,6 @@
     <dimen name="placeholder_picture_height">280dp</dimen>
     <dimen name="display_name_margin_top">80dp</dimen>
     <dimen name="placeholder_text_size">15sp</dimen>
+    <dimen name="placeholder_text_size_large">20sp</dimen>
+    <dimen name="longish_divider">320dp</dimen>
 </resources>
